css/datagrid/datagrid.css
/**
 * @license Highcharts Dashboards v@product.version@
 *
 * (c) 2009-2023 Highsoft AS
 *
 * License: www.highcharts.com/license
 */

:root,
.highcharts-light {
    --highcharts-background-color: #ffffff;

    /* Neutral colors */
    --highcharts-neutral-color-100: #000000;
    --highcharts-neutral-color-80: #333333;
    --highcharts-neutral-color-60: #666666;
    --highcharts-neutral-color-40: #999999;
    --highcharts-neutral-color-20: #cccccc;
    --highcharts-neutral-color-10: #e6e6e6;
    --highcharts-neutral-color-5: #f2f2f2;
    --highcharts-neutral-color-3: #f7f7f7;
    --highcharts-neutral-color-0: #ffffff;

    /* Highlight colors */
    --highcharts-highlight-color-100: #0022ff;
    --highcharts-highlight-color-80: #334eff;
    --highcharts-highlight-color-60: #667aff;
    --highcharts-highlight-color-20: #ccd3ff;
    --highcharts-highlight-color-10: #e6e9ff;
    --highcharts-highlight-color-7: #0000ff07;
}

@media (prefers-color-scheme: dark) {
    :root {
        /* UI colors */
        --highcharts-background-color: #333333;

        /*
            Neutral color variations
            https://www.highcharts.com/samples/highcharts/css/palette-helper
        */
        --highcharts-neutral-color-100: rgb(255, 255, 255);
        --highcharts-neutral-color-80: rgb(214, 214, 214);
        --highcharts-neutral-color-60: rgb(173, 173, 173);
        --highcharts-neutral-color-40: rgb(133, 133, 133);
        --highcharts-neutral-color-20: rgb(92, 92, 92);
        --highcharts-neutral-color-10: rgb(71, 71, 71);
        --highcharts-neutral-color-5: rgb(61, 61, 61);
        --highcharts-neutral-color-3: rgb(57, 57, 57);
        --highcharts-neutral-color-0: rgb(0, 0, 0);

        /* Highlight color variations */
        --highcharts-highlight-color-100: rgb(122, 167, 255);
        --highcharts-highlight-color-80: rgb(108, 144, 214);
        --highcharts-highlight-color-60: rgb(94, 121, 173);
        --highcharts-highlight-color-20: rgb(65, 74, 92);
        --highcharts-highlight-color-10: rgb(58, 63, 71);
    }
}

.highcharts-dark {
    /* UI colors */
    --highcharts-background-color: #333333;

    /*
        Neutral color variations
        https://www.highcharts.com/samples/highcharts/css/palette-helper
    */
    --highcharts-neutral-color-100: rgb(255, 255, 255);
    --highcharts-neutral-color-80: rgb(214, 214, 214);
    --highcharts-neutral-color-60: rgb(173, 173, 173);
    --highcharts-neutral-color-40: rgb(133, 133, 133);
    --highcharts-neutral-color-20: rgb(92, 92, 92);
    --highcharts-neutral-color-10: rgb(71, 71, 71);
    --highcharts-neutral-color-5: rgb(61, 61, 61);
    --highcharts-neutral-color-3: rgb(57, 57, 57);

    /* Highlight color variations */
    --highcharts-highlight-color-100: rgb(122, 167, 255);
    --highcharts-highlight-color-80: rgb(108, 144, 214);
    --highcharts-highlight-color-60: rgb(94, 121, 173);
    --highcharts-highlight-color-20: rgb(65, 74, 92);
    --highcharts-highlight-color-10: rgb(58, 63, 71);
}

/* stylelint-disable max-line-length */

/* ==== DataGrid Core ==== */
.highcharts-datagrid-container * {
    box-sizing: border-box;
    font-family:
        -apple-system,
        BlinkMacSystemFont,
        "Segoe UI",
        Roboto,
        Helvetica,
        Arial,
        "Apple Color Emoji",
        "Segoe UI Emoji",
        "Segoe UI Symbol",
        sans-serif;
}

.highcharts-datagrid-container {
    display: flex;
    flex-direction: column;
    height: 100%;
    overflow: hidden;
}

.highcharts-datagrid-column {
    width: 0;
}

/* Table */
.highcharts-datagrid-table {
    width: 100%;
    table-layout: fixed;
    border-collapse: separate;
    border-spacing: 0;
    flex: 1;
}

.highcharts-datagrid-table.highcharts-datagrid-virtualization {
    display: flex; /* Move to scrollable */
    flex-direction: column; /* Move to scrollable */
}

/* Table Header */
.highcharts-datagrid-table.highcharts-datagrid-virtualization thead {
    display: block;
}

.highcharts-datagrid-table thead tr {
    height: 32px;
}

.highcharts-datagrid-table thead th {
    position: relative;
    border-bottom: 1px solid var(--highcharts-neutral-color-20);
}

.highcharts-datagrid-table thead th .highcharts-datagrid-header-cell-content {
    width: calc(100% - 15px); /* 12px width of sorting icon, 3px padding */
    display: block;
    overflow: hidden;
    text-overflow: ellipsis;
    padding-left: 3px;
    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
    user-select: none; /* Standard syntax */
}

.highcharts-datagrid-table thead th button.highcharts-datagrid-header-cell-content {
    border: none;
    background-color: transparent;
    color: var(--highcharts-neutral-color-100);
    cursor: pointer;
    font-weight: bold;
    font-size: 1em;
}

.highcharts-datagrid-table thead th button.highcharts-datagrid-header-cell-content:hover {
    background-color: transparent;
}

.highcharts-datagrid-table thead th .highcharts-datagrid-header-cell-content span {
    flex: 1;
    overflow: hidden;
    text-overflow: ellipsis;
}

.highcharts-datagrid-resizer-content thead,
.highcharts-datagrid-resizer-content tbody {
    display: block;
    overflow: hidden;
    width: 100%;
}

.highcharts-datagrid-resizer-content tr {
    width: 100%;
}

.highcharts-datagrid-table thead th .highcharts-datagrid-column-resizer {
    position: absolute;
    top: 0;
    width: 16px;
    right: -9px;
    height: 100%;
    cursor: col-resize;
    user-select: none;
    z-index: 10;
}

.highcharts-datagrid-table thead th .highcharts-datagrid-column-resizer::after {
    content: "";
    position: absolute;
    display: block;
    height: 20px;
    width: 7px;
    margin-top: -10px;
    top: 50%;
    left: 2px;
}

.highcharts-datagrid-table thead th .highcharts-datagrid-column-resizer:hover::after {
    border-left: 2px solid var(--highcharts-neutral-color-20);
    border-right: 2px solid var(--highcharts-neutral-color-20);
}

/* Sorting */
.highcharts-datagrid-table thead th.highcharts-datagrid-column-sortable {
    cursor: pointer;
}

th.highcharts-datagrid-column-sortable > .highcharts-datagrid-column-sortable-icon {
    right: 10px;
    top: calc(50% - 10px);
    bottom: 50%;
    position: absolute;
    display: none;
    width: 12px;
    height: 12px;
    user-select: none;
    pointer-events: none;
    color: var(--highcharts-neutral-color-60);
}

.highcharts-datagrid-column-sortable.highcharts-datagrid-column-sorted-asc .highcharts-datagrid-column-sortable-icon,
.highcharts-datagrid-column-sortable.highcharts-datagrid-column-sorted-desc .highcharts-datagrid-column-sortable-icon {
    display: inline-block;
}

.highcharts-datagrid-column-sortable.highcharts-datagrid-column-sorted-desc .highcharts-datagrid-column-sortable-icon {
    transform: rotate(180deg);
    top: calc(50% - 3px);
    right: 7px;
}

.highcharts-datagrid-container:has(.highcharts-datagrid-no-data) {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    height: 100%;
    padding: 16px;
    text-align: center;
    box-sizing: border-box;
}

/* Table body */
.highcharts-datagrid-table.highcharts-datagrid-virtualization tbody {
    overflow: auto;
    height: 100%;
    display: block;
    position: relative;
    min-height: 0; /* Move to scrollable, should the 100% be restored here? */
    flex: 1; /* Move to scrollable */
}

.highcharts-datagrid-table tbody tr {
    overflow: hidden;
    width: 100%;
    height: 36px;
}

.highcharts-datagrid-table.highcharts-datagrid-virtualization tbody tr {
    position: absolute;
}

.highcharts-datagrid-table tbody td {
    height: inherit;
    overflow: hidden;
}

.highcharts-datagrid-table tbody.highcharts-datagrid-rows-content-nowrap td {
    white-space: nowrap;
    text-overflow: ellipsis;
}

.highcharts-datagrid-table tbody td.highcharts-datagrid-edited-cell {
    padding: 0 0 1px;
}

.highcharts-datagrid-table tbody td.highcharts-datagrid-edited-cell input,
.highcharts-datagrid-table tbody td.highcharts-datagrid-edited-cell input:focus {
    border-width: 0;
    width: 100%;
    height: 100%;
    outline: none;
    float: left;
    font-size: 1em;
}

/* Accessibility */
.highcharts-datagrid-visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    overflow: hidden;
    white-space: nowrap;
    clip: rect(1px, 1px, 1px, 1px);
    margin-top: -3px;
    opacity: 0.01;
}

/* ==== Default Theme ==== */
.highcharts-datagrid-container {
    background-color: var(--highcharts-background-color);
    color: var(--highcharts-neutral-color-100);
}

/* Table */
.highcharts-datagrid-table {
    color: var(--highcharts-neutral-color-100);
    background-color: var(--highcharts-background-color);
    border: 1px solid var(--highcharts-neutral-color-20);
}

.highcharts-datagrid-caption {
    padding: 5px;
}

/* Table header */
.highcharts-datagrid-table thead {
    background-color: var(--highcharts-neutral-color-5);
}

.highcharts-datagrid-table thead tr {
    border-top: 1px solid var(--highcharts-neutral-color-20);
}

.highcharts-datagrid-table thead tr:first-child {
    border-top: none;
}

.highcharts-datagrid-table thead th {
    border-left: 1px solid var(--highcharts-neutral-color-20);
}

.highcharts-datagrid-table thead th.highcharts-datagrid-hovered-column {
    background-color: var(--highcharts-highlight-color-10);
}

.highcharts-datagrid-header-cell-content::after {
    color: var(--highcharts-neutral-color-60);
}

.highcharts-datagrid-table td:first-child,
.highcharts-datagrid-table thead th.highcharts-datagrid-column-first,
.highcharts-datagrid-table thead tr:first-child th:first-child {
    border-left: none;
}

/* Table body */
.highcharts-datagrid-table tbody tr {
    background: var(--highcharts-background-color);
}

.highcharts-datagrid-table tbody tr.highcharts-datagrid-row.highcharts-datagrid-row-even {
    background-color: var(--highcharts-neutral-color-3);
}

.highcharts-datagrid-table tbody td {
    border-left: 1px solid var(--highcharts-neutral-color-20);
    padding: 0 4px;
}

.highcharts-datagrid-table tbody tr.highcharts-datagrid-hovered-row,
.highcharts-datagrid-table tbody tr.highcharts-datagrid-row.highcharts-datagrid-row-even.highcharts-datagrid-hovered-row {
    background-color: var(--highcharts-highlight-color-10);
}

.highcharts-datagrid-table tbody tr td.highcharts-datagrid-hovered-column,
.highcharts-datagrid-table tbody tr.highcharts-datagrid-hovered-row td.highcharts-datagrid-hovered-column {
    background-color: var(--highcharts-highlight-color-10);
}

.highcharts-datagrid-table tbody tr td.highcharts-datagrid-hovered-column {
    background-color: var(--highcharts-highlight-color-7);
}

.highcharts-datagrid-table tbody td.highcharts-datagrid-edited-cell input,
.highcharts-datagrid-table tbody td.highcharts-datagrid-edited-cell input:focus {
    box-shadow: inset 0 0 0 1px #0000ed;
    padding: 0 4px;
    background-color: #b7d4ff;
}

.highcharts-datagrid-table tbody td:focus,
.highcharts-datagrid-table thead th:focus-visible {
    outline: none;
    box-shadow: inset 0 0 0 1px rgb(117, 124, 199);
}

/* Credits */
.highcharts-datagrid-credits {
    color: var(--highcharts-neutral-color-40);
    font-size: 0.6em;
    transition: color 250ms, font-size 250ms;
    text-decoration: none;
    margin: 0 8px;
}

.highcharts-datagrid-credits:hover {
    color: var(--highcharts-neutral-color-100);
    font-size: 0.7em;
}

.highcharts-datagrid-credits-container {
    text-align: right;
    padding-bottom: 2px;
}

/* End Default Theme */

